implementacion de dependencias mongoBd y clases correspondientes